##############################################################################
#
# Name: setup.cfg
#
# Function:
#       Python setup information for this app.
#
# Copyright notice and license:
#       See LICENSE.md
#
# Author:
#       Terry Moore
#
##############################################################################

[metadata]
name = ttn_mass_provision
version = attr: ttn_mass_provision.__version__

[options]
packages = ttn_mass_provision

install_requires =
    fabric >= 3.2.2

# include_package_data = True

[options.entry_points]
console_scripts =
    ttn_mass_provision = ttn_mass_provision.__main__:main

[options.package_data]
ttn_mass_provision =
    *.json
    *.pub
    ssh_tunnel
